--- a/life_clock_testing/style-mobile.css
+++ b/life_clock_testing/style-mobile.css
@@ -153,6 +153,10 @@ p {
     color: black;
 }
 
+#date_input::placeholder {
+    color:black;
+}
+
 .life-circle {
     position: relative;
     margin-top: 0;
